--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -65,10 +65,11 @@
         android:layout_width="100dp"
         android:layout_height="110dp"
         android:layout_marginTop="64dp"
+        android:layout_marginBottom="60dp"
         android:text="Back"
         android:textSize="20dp"
         app:layout_constraintStart_toStartOf="@+id/btnTop"
-        app:layout_constraintTop_toBottomOf="@+id/btnTop" />
+        app:layout_constraintBottom_toBottomOf="parent"/>
 
     <Button
         android:id="@+id/btnOne"
